syntax = "proto3";

package pb;

import "google/protobuf/empty.proto";

option go_package = "go-f2lb/pb";

service MemberService {
  rpc List(google.protobuf.Empty) returns (Members) {}
  rpc Active(google.protobuf.Empty) returns (Member) {}
  rpc Top(google.protobuf.Empty) returns (Member) {}
}

message Members {
  repeated Member members = 1;
}

message Member {
  string discordId = 1;
  string ticker = 2;
  string stakeKey = 3;
  string stakeAddr = 4;
  uint32 adaDeclared = 5;
  uint32 adaDelegated = 6;
  uint32 epochGranted = 7;
  string poolIdHex = 8;
  string poolIdBech32 = 9;
  string poolVrfVKeyHash = 10;
  string delegatedPool = 20;
  uint32 mainQCurrPos = 21;
  uint32 startingEpoch = 22;
  string startingTime = 23;
  uint32 epochGrantedOnAddonQueue = 24;
  uint32 startingEpochOnAddonQueue = 25;
  string startingTimeOnAddonQueue = 26;
  uint32 activeStake = 27;
  uint32 liveStake = 28;
  uint32 liveDelegators = 29;

  uint32 blockHeight = 40;
}
